name:                rayt
category:            Graphics
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
cabal-version:       >=1.10
author:              Joseph Rock
maintainer:          Joseph Rock <wax818@gmail.com>
homepage:            https://github.com/j-rock/rayt
bug-reports:         https://github.com/j-rock/rayt
copyright:           Copyright (C) 2016 Joseph Rock
synopsis:            Ray tracer
build-type:          Simple
tested-with:         GHC == 7.10.3
extra-source-files:
  README.md

source-repository head
  type: git
  location: git://github.com/j-rock/rayt.git

executable MP2
  default-language:    Haskell2010
  -- ghc-options:         -O2 -rtsopts -threaded -eventlog "-with-rtsopts=-N7 -ls -H2G"
  ghc-options:         -O2 -rtsopts -threaded "-with-rtsopts=-N7 -H2G"
  hs-source-dirs:      exec-src
  main-is:             Mp2.hs
  build-depends:
    base               >= 4.7 && < 5,
    async              >= 2.1 && < 2.2,
    directory          >= 1.2 && < 1.3,
    JuicyPixels        >= 3.2 && < 3.3,
    vector             >= 0.11 && < 0.12,
    rayt

library
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funfolding-use-threshold=16 -optc-O3 -optc-ffast-math
  hs-source-dirs:      src, src/Ray
  build-depends:
    base               >= 4.7   && < 5,
    vector             >= 0.11  && < 0.12,
    MonadRandom        >= 0.4   && < 0.5,
    random-shuffle     >= 0.0.4 && < 0.1,
    split              >= 0.2.3 && < 0.3,
    attoparsec         >= 0.13  && < 0.14,
    text               >= 1.2   && < 1.3
  exposed-modules:
    Ray,
    Ray.Affine,
    Ray.Cast,
    Ray.Geometry,
    Ray.Intersection,
    Ray.Mesh,
    Ray.Octree,
    Ray.RayGen,
    Ray.Scene,
    Ray.Shape
